WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194948
SVG load external file via <use> ignores ServiceWorker when offline
https://bugs.webkit.org/show_bug.cgi?id=194948
Summary
SVG load external file via <use> ignores ServiceWorker when offline
Laszlo
Reported
2019-02-22 09:40:37 PST
Created
attachment 362727
[details]
Example with one html and one svg file When referencing an external SVG (external.svg) inside an inline SVG inside an html file (index.html) via <use href="external.svg#someid"> and caching everything via ServiceWorker (cache.addAll(["index.html", "external.svg"])) the <use> tag does not display the cached version from the service worker when offline but displays nothing as if the file is not found. But when accessing the svg directly via adress bar it can (of course) be loaded even when offline. Loading the external SVG via <img> tag does also work when offline. So it seems there is a bug when combining <use> tag an ServiceWorker. I have attached an example. In other browsers (chrome and firefox) it works fine.
Attachments
Example with one html and one svg file
(8.54 KB, application/zip)
2019-02-22 09:40 PST
,
Laszlo
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-01 15:45:04 PDT
<
rdar://problem/96318522
>
youenn fablet
Comment 2
2022-07-04 09:00:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2056
EWS
Comment 3
2022-07-05 05:18:38 PDT
Committed
252132@main
(c923ed26acc4): <
https://commits.webkit.org/252132@main
> Reviewed commits have been landed. Closing PR #2056 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug