SVG load external file via <use> ignores ServiceWorker when offline https://bugs.webkit.org/show_bug.cgi?id=194948 rdar://problem/96318522

Reviewed by Alex Christensen.

Change destination from document to image for SVGUseElement loads.
This will make sure we reuse the document service worker for these loads.
image is the destination used by Chrome as well (Firefox is using the empty string),
as the SVG spec is not integrated with fetch spec yet.

* LayoutTests/http/wpt/service-workers/use-element-worker.js: Added.
* LayoutTests/http/wpt/service-workers/use-element.https-expected.txt: Added.
* LayoutTests/http/wpt/service-workers/use-element.https.html: Added.
* Source/WebCore/svg/SVGUseElement.cpp:

Canonical link: https://commits.webkit.org/252132@main